--- a/Hotel.Api/Hotel.Api.csproj
+++ b/Hotel.Api/Hotel.Api.csproj
@@ -13,8 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hotel.Application\Hotel.Application.csproj" />
   </ItemGroup>
 
 </Project>
