--- a/Hotel.Api/appsettings.json
+++ b/Hotel.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=contactDb;User Id=admin;Password=demo;"
+    "DefaultConnection": "Server=.;Database=HotelDb;User Id=sa;Password=123456;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
