Report services created

--- a/Report.Api/appsettings.json
+++ b/Report.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "Connection": "mongodb://localhost:27017",
+    "DatabaseName": "reportMongoDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
