--- a/Report.Application/Report.Application.csproj
+++ b/Report.Application/Report.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flurl.Http" Version="3.2.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
   </ItemGroup>
 
