--- a/Report.Application/Report.Application.csproj
+++ b/Report.Application/Report.Application.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
+    <PackageReference Include="MassTransit" Version="8.0.16" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.16" />
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
   </ItemGroup>
 
